# demonstrate-nan-usage

./: README.md  differences.md  note-on-cpp.md  note-on-precision.md  pom.xml
data/nan/: README.md
data/nodata/: README.md
src/main/cpp/: CMakeLists.txt  TestCase.cpp
src/main/java/: module-info.java
src/main/java/com/geomatys/nan/: Configuration.java  DataGenerator.java  Runner.java  TestCase.java  TestNaN.java  TestNodata.java  package-info.java
src/main/python/: TestCase.py
src/test/java/com/geomatys/nan/: MainTest.java
